bad/assign_new_array_bool_int.example_compiler_output
ERROR
[1mbad/assign_new_array_bool_int.lat:4:17: [1;31merror: [0;1mleft side is not assignable[m
	new boolean[3] = 42;
	               [1;32m^[m
[1mbad/assign_new_array_bool_int.lat:4:2: [1;34mnote: [0;1mleft side starts here[m
	new boolean[3] = 42;
	[1;32m^[m
